@@ -1,5 +1,8 @@
 2008-07-17  Pavel Roskin  <proski@gnu.org>
 
+	* disk/efi/efidisk.c: Fix format warnings on x86_64.
+	* kern/efi/efi.c: Likewise.
+
 	* aclocal.m4 (grub_PROG_TARGET_CC): New macro.  Check if the
 	target compiler is functional.
 	* configure.ac: Call grub_PROG_TARGET_CC once all target flags
